docs/api/qiskit/0.19/qiskit.aqua.operators.primitive_ops.MatrixOp.mdx
---
title: MatrixOp (v0.19)
description: API reference for qiskit.aqua.operators.primitive_ops.MatrixOp in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.primitive_ops.MatrixOp
---

# MatrixOp

<Class id="qiskit.aqua.operators.primitive_ops.MatrixOp" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/operators/primitive_ops/matrix_op.py" signature="MatrixOp(primitive=None, coeff=1.0)" modifiers="class">
  Class for Operators represented by matrices, backed by Terra’s `Operator` module.

  **Parameters**

  *   **primitive** (`Union`\[`list`, `ndarray`, `spmatrix`, [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.operators.operator.Operator"), `None`]) – The matrix-like object which defines the behavior of the underlying function.
  *   **coeff** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `None`]) – A coefficient multiplying the primitive

  **Raises**

  *   **TypeError** – invalid parameters.
  *   **ValueError** – invalid parameters.

  ## Attributes

  <span id="matrixop-coeff" />

  ### coeff

  <Attribute id="qiskit.aqua.operators.primitive_ops.MatrixOp.coeff" attributeTypeHint="Union[int, float, complex, qiskit.circuit.parameterexpression.ParameterExpression]">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]

    **Returns**

    The coefficient.
  </Attribute>

  <span id="matrixop-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.operators.primitive_ops.MatrixOp.num_qubits" attributeTypeHint="int">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Return type**

    `int`

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Attribute>

  <span id="matrixop-primitive" />

  ### primitive

  <Attribute id="qiskit.aqua.operators.primitive_ops.MatrixOp.primitive" attributeTypeHint="Union[qiskit.circuit.instruction.Instruction, qiskit.circuit.quantumcircuit.QuantumCircuit, list, numpy.ndarray, scipy.sparse.base.spmatrix, qiskit.quantum_info.operators.operator.Operator, qiskit.quantum_info.operators.pauli.Pauli]">
    The primitive defining the underlying function of the Operator.

    **Return type**

    `Union`\[[`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction"), [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `list`, `ndarray`, `spmatrix`, [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.operators.operator.Operator"), [`Pauli`](qiskit.quantum_info.Pauli "qiskit.quantum_info.operators.pauli.Pauli")]

    **Returns**

    The primitive object.
  </Attribute>

  ## Methods

  <span id="matrixop-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.__mul__" signature="MatrixOp.__mul__(other)">
    Overload `*` for Operator scalar multiplication.

    **Parameters**

    **other** (`Number`) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="matrixop-add" />

  ### add

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.add" signature="MatrixOp.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="matrixop-adjoint" />

  ### adjoint

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.adjoint" signature="MatrixOp.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="matrixop-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.assign_parameters" signature="MatrixOp.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.
  </Function>

  <span id="matrixop-bind-parameters" />

  ### bind\_parameters

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.bind_parameters" signature="MatrixOp.bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="matrixop-compose" />

  ### compose

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.compose" signature="MatrixOp.compose(other)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` with which to compose self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.
  </Function>

  <span id="matrixop-equals" />

  ### equals

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.equals" signature="MatrixOp.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  <span id="matrixop-eval" />

  ### eval

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.eval" signature="MatrixOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    **Parameters**

    **front** (`Union`\[`str`, `dict`, `ndarray`, [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `float`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="matrixop-exp-i" />

  ### exp\_i

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.exp_i" signature="MatrixOp.exp_i()">
    Return a `CircuitOp` equivalent to e^-iH for this operator H

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="matrixop-log-i" />

  ### log\_i

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.log_i" signature="MatrixOp.log_i(massive=False)">
    Return a `MatrixOp` equivalent to log(H)/-i for this operator H. This function is the effective inverse of exp\_i, equivalent to finding the Hermitian Operator which produces self when exponentiated.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="matrixop-mul" />

  ### mul

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.mul" signature="MatrixOp.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="matrixop-neg" />

  ### neg

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.neg" signature="MatrixOp.neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the negation of self.
  </Function>

  <span id="matrixop-power" />

  ### power

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.power" signature="MatrixOp.power(exponent)">
    Return Operator composed with self multiple times, overloaded by `**`.

    **Parameters**

    **exponent** (`int`) – The int number of times to compose self with itself.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to self composed with itself exponent times.
  </Function>

  <span id="matrixop-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.primitive_strings" signature="MatrixOp.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="matrixop-reduce" />

  ### reduce

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.reduce" signature="MatrixOp.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="matrixop-tensor" />

  ### tensor

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.tensor" signature="MatrixOp.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="matrixop-tensorpower" />

  ### tensorpower

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.tensorpower" signature="MatrixOp.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `int`]

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.
  </Function>

  <span id="matrixop-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_circuit" signature="MatrixOp.to_circuit()">
    Returns a `QuantumCircuit` equivalent to this Operator.

    **Return type**

    [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")
  </Function>

  <span id="matrixop-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_circuit_op" signature="MatrixOp.to_circuit_op()">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="matrixop-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_instruction" signature="MatrixOp.to_instruction()">
    Returns an `Instruction` equivalent to this Operator.

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="matrixop-to-legacy-op" />

  ### to\_legacy\_op

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_legacy_op" signature="MatrixOp.to_legacy_op(massive=False)">
    Attempt to return the Legacy Operator representation of the Operator. If self is a `SummedOp` of `PauliOps`, will attempt to convert to `WeightedPauliOperator`, and otherwise will simply convert to `MatrixOp` and then to `MatrixOperator`. The Legacy Operators cannot represent `StateFns` or proper `ListOps` (meaning not one of the `ListOp` subclasses), so an error will be thrown if this method is called on such an Operator. Also, Legacy Operators cannot represent unbound Parameter coeffs, so an error will be thrown if any are present in self.

    Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    [`MatrixOperator`](qiskit.aqua.operators.legacy.MatrixOperator "qiskit.aqua.operators.legacy.matrix_operator.MatrixOperator")

    **Returns**

    The `LegacyBaseOperator` representing this Operator.

    **Raises**

    **TypeError** – self is an Operator which cannot be represented by a `LegacyBaseOperator`, such as `StateFn`, proper (non-subclass) `ListOp`, or an Operator with an unbound coeff Parameter.
  </Function>

  <span id="matrixop-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_matrix" signature="MatrixOp.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  <span id="matrixop-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_matrix_op" signature="MatrixOp.to_matrix_op(massive=False)">
    Returns a `MatrixOp` equivalent to this Operator.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="matrixop-to-pauli-op" />

  ### to\_pauli\_op

  <Function id="qiskit.aqua.operators.primitive_ops.MatrixOp.to_pauli_op" signature="MatrixOp.to_pauli_op(massive=False)">
    Returns a sum of `PauliOp` s equivalent to this Operator.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>
</Class>

